gccida/g2/invert_truthvalue
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/invert_truthvalue/src/fold-const.c:3294:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/invert_truthvalue/src/fold-const.c:3296:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/invert_truthvalue/src/fold-const.c:3306:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/invert_truthvalue/src/fold-const.c:3310:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/invert_truthvalue/src/fold-const.c:3354:18: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
return build1( ( tree_code)*( ( unsigned __int8 *)&elements->block.common + 16), type, v6); 
                 ^~~~~~~~~
                 tree_cons
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/invert_truthvalue/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/invert_truthvalue/src/fold-const.c:3354:28: error: invalid operands to binary expression ('tree (tree, tree, tree)' (aka 'union tree_node *(union tree_node *, union tree_node *, union tree_node *)') and 'unsigned char *')
return build1( ( tree_code)*( ( unsigned __int8 *)&elements->block.common + 16), type, v6); 
               ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/invert_truthvalue/src/fold-const.c:3414:17: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
return build( ( tree_code)CSWTCH_547[v28], type, elements->int_cst.int_cst.low, elements->int_cst.int_cst.high); 
                ^~~~~~~~~
                tree_cons
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/invert_truthvalue/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/invert_truthvalue/src/fold-const.c:3414:27: error: expected ')'
return build( ( tree_code)CSWTCH_547[v28], type, elements->int_cst.int_cst.low, elements->int_cst.int_cst.high); 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/invert_truthvalue/src/fold-const.c:3414:13: note: to match this '('
return build( ( tree_code)CSWTCH_547[v28], type, elements->int_cst.int_cst.low, elements->int_cst.int_cst.high); 
            ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/invert_truthvalue/src/obj/fold-const.o] Error 1
